# SparseIso

./: .gitignore  README.md  run_SparseIso_paired_end.sh  run_SparseIso_single_end.sh
boost/threadpool/: task_adaptors.hpp
src/: CMakeLists.txt  CMakeLists.txt~  Info.cpp  Info.h  Makefile  SparseIso.cpp  SparseIso.cpp~  basic_math.h  filter_bam.cpp  filter_bam.cpp~  filter_bam.h  getinsertsize.cpp  getinsertsize.h  options.cpp  options.h  readinstance.cpp  readinstance.h  sampling.h  utility.cpp  utility.h
tools/: processsam
